objects/tffa__Credential__mdt.object
<CustomObject>
    <description>Will contain API keys or other authentication information for third-party integration providers.This will be used in case it is not supported by Named Credential only.</description>
    <fields>
        <fullName>tffa__ApiKey__c</fullName>
        <description>Holds key/token value in encrypted form to access third party API (Encrypted by tffa.Cipher.encrypt(&apos;&apos;)</description>
        <label>API Key(Encrypted)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ApiVersion__c</fullName>
        <description>Version of the third party API.</description>
        <label>API Version</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__AudienceClaim__c</fullName>
        <description>The audience claim identifies the recipients that the JWT is intended for</description>
        <label>AudienceClaim</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>tffa__CertificateContent__c</fullName>
        <description>Additional certificate content used to exchange with the provider for authentication</description>
        <label>Certificate Content</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__CertificateName__c</fullName>
        <description>Certificate name used to exchange JWT token</description>
        <label>Certificate Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__CertificateSource__c</fullName>
        <description>Source of the Certificate to be used to exchange token. e.g. STATIC_RESOURCE, DOCUMENT, CONTENT_ASSET</description>
        <label>Certificate Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ClientId__c</fullName>
        <description>External identifier of the the registered client with the third party system</description>
        <label>Client Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ClientName__c</fullName>
        <description>Name of the the registered client with the third party system</description>
        <label>Client Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Description__c</fullName>
        <description>Describe the purpose of the credentials</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tffa__EnableLogging__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables logging of API request and response.</description>
        <inlineHelpText>Enables logging of API request and response.</inlineHelpText>
        <label>Enable Logging</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Whether the credential entry is enabled</description>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__EnvironmentName__c</fullName>
        <description>Name of the Environment for which the current credentials are maintained</description>
        <label>Environment Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__NamedCredential__c</fullName>
        <description>The developer name of related NamedCredential.</description>
        <label>Named Credential</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__OAuth2ClientUrl__c</fullName>
        <description>Entry url used for authorising access to client&apos;s information in an external system via OAuth2 flow.</description>
        <label>OAuth2 Client Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>tffa__OtherKey__c</fullName>
        <description>Holds additional key/token value in encrypted form to access third party API (Encrypted by tffa.Cipher.encrypt(&apos;&apos;)</description>
        <label>Other Key(Encrypted)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Parameters__c</fullName>
        <description>A JSON string containing additional options as (key, value) pairs. Typically used to specify additional parameters specific to the API. Don&apos;t use this to store API secrets or keys, consider using regular key fields. e.g. {&quot;Alloy-Sandbox-Use-Webhooks&quot;:&quot;true&quot;}</description>
        <inlineHelpText>A JSON string containing additional options as (key, value) pairs. Typically used to specify additional parameters specific to the API. Don&apos;t use this to store API secrets or keys, consider using regular key fields. e.g. {&quot;Alloy-Sandbox-Use-Webhooks&quot;:&quot;true&quot;}</inlineHelpText>
        <label>Parameters</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__PrivateKey__c</fullName>
        <description>Holds private or secret key/token value in encrypted form to access third party API (Encrypted by tffa.Cipher.encrypt(&apos;&apos;)</description>
        <label>Private Key(Encrypted)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Scope__c</fullName>
        <description>Scope is a mechanism in OAuth 2.0 to limit an application&apos;s access to a user&apos;s account.</description>
        <label>Scope</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__SubjectClaim__c</fullName>
        <description>The subject claim identifies the recipients that the JWT is intended for</description>
        <label>Subject Claim</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Website__c</fullName>
        <description>The URL of the website</description>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <label>Credential</label>
    <listViews>
        <fullName>tffa__All</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>tffa__Description__c</columns>
        <columns>NamespacePrefix</columns>
        <columns>tffa__Enabled__c</columns>
        <columns>tffa__Website__c</columns>
        <columns>tffa__EnvironmentName__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Credentials</pluralLabel>
</CustomObject>